--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-!DOCTYPE html
-html
-    head
-        meta charset=utf-8
-        titleGitHub is fun!title
-    head
-    body
-        pI'm hosted with GitHub Pages.p
-    body
-html
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>GitHub is fun!</title>
+    </head>
+    <body>
+        <p>I'm hosted with GitHub Pages.</p>
+    </body>
+</html>
