--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>GitHub is fun!</title>
+        <title>Kaiwen Xu</title>
     </head>
     <body>
-        <p>I'm hosted with GitHub Pages.</p>
+        <p>Python is interesting.</p>
     </body>
 </html>
